# experiments

./: .gitignore  README.md  inventory.ini  pyproject.toml
algorithms/algs_ds/: search.py  time_perf.py
go-experiments/books/go-programming-language/: ch1.go  ch1_test.go  ch2.go
js-experiments/: package-lock.json  package.json
js-experiments/base/: closure.js  file_import.js  for_switch_while.js  fucntions.js  misc.js
my-job/: pyproject.toml
my-job/kip/: .gitignore
my-job/users_unload/: users.py
my-job/waybills/: .gitignore  checks.py
playbook/: git_install.yml  git_uninstall.yml
playbooks/: resgister_result.yml
py-experiments/algorithms/trash/: capitalize_word.py  num_power.py
py-experiments/gost-group-job/: pyproject.toml
py-experiments/gost-group-job/users_unload/: users.py
py-experiments/gost-group-job/waybills/: checks.py
py-experiments/python-design-patterns/creational-patterns/: singleton.py
py-experiments/try-async/: async.py  generator_async.py  original.py  select_1.py  select_2.py
py-experiments/try-parsing/: req.py
python-design-patterns/creational-patterns/: singleton.py
ruby-experiments/rails-agile-dev/: .rubocop.yml  Gemfile  package.json
ruby-experiments/rails-agile-dev/.bundle/: config
tool-experiments/try-docker/: Dockerfile  Makefile  docker-compose.yml
try-ansible/playbooks/: conditional_test.yml  uninstall_packages.yml
try-async/: async.py  generator_async.py  original.py  select_1.py  select_2.py
try-docker/: .env  pyproject.toml
try-docker/core/: settings.py
try-flask/: pyproject.toml  setup.cfg
try-flask/microblog/: Makefile  pyproject.toml
try-flask/microblog/app/: config.py  views.py
try-flask/microblog/app/templates/: index.html
try-flask/microblog/tests/: test_microblog.py
try-flask/myapp/: auth.py
try-flask/tests/: test_db.py
try-flask/trash/: Makefile
try-flask/trash/myapp/: __init__.py  blog.py
try-flask/trash/tests/: conftest.py  test_auth.py  test_blog.py  test_factory.py
try-parsing/: pyproject.toml  req.py
try-socket/simple-web-app/: main.py
(+35 files in other folders)
